--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "next": "15.1.0",
     "next-intl": "^3.14.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sanitize-html": "^2.17.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19.0.3",
+    "@types/sanitize-html": "^2.16.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.1.0",
